# groceryaid

./: .env.backend.sample  .env.db.sample  COPYRIGHT  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .pylintrc  Dockerfile  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0a51e05c0710_add_cartproducts_price.py  200f1c0b3617_initial_revision.py  77d5a369b1da_add_cartproducts_rank.py
backend/groceryaid/: __init__.py  __main__.py  _app.py  db.py  prices.py  settings.py
backend/groceryaid/api/: __init__.py  _api.py  models.py  stores.py  storevisits.py
backend/groceryaid/db/: __init__.py  __main__.py  _db.py  utils.py
backend/groceryaid/retail/: __init__.py  __main__.py  common.py  faker.py  sok.py  storevisits.py  tasks.py
backend/tests/: conftest.py  factories.py
backend/tests/api/: conftest.py  test_stores.py  test_storevisits.py
backend/tests/retail/: conftest.py  test_ean.py  test_sok.py  test_storevisits.py  test_tasks.py
frontend/: .env.development  Dockerfile  package-lock.json  package.json
frontend/nginx/conf.d/: default.conf
frontend/public/: index.html  manifest.json
frontend/src/: App.scss  App.spec.tsx  App.tsx  api.ts  ean.ts  hooks.ts  index.tsx  store.ts
frontend/src/api/: api.spec.ts  client.ts  index.ts  storeVisitOps.ts  types.ts
frontend/src/components/: BarcodeScanner.tsx  Cart.spec.tsx  Cart.tsx  CartEditor.spec.tsx  CartEditor.tsx  CartList.spec.tsx  CartList.tsx  GroupedCart.spec.tsx  GroupedCart.tsx  ProductPicker.spec.tsx  ProductPicker.tsx  StorePicker.spec.tsx  StorePicker.tsx
frontend/src/reducers/: storevisit.ts
traefik/: traefik.yml
(+4 files in other folders)
